# mcp-sdk

./: .gitignore  README.md  __init__.py  architecture.txt  pyproject.toml  requirements.txt  setup.py  test.py
core/: contracts.py  dispatcher.py
core/tools/: __init__.py  generate.py  validate.py
protocol/: errors.py  request.py  response.py  schema.py
providers/: README.md  __init__.py
providers/pollinations/: __init__.py  audio.py  image.py  text.py
shell/: cli.py  composition.py  http.py  stdio.py
utils/: json.py  logging.py
